--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     crossorigin="" />
 
   <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="static/css/style.css">
+  <link rel="stylesheet" type="text/css" href="https://brenprie.github.io/Leaflet-Challenge/static/css/style.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
   <script src="https://d3js.org/d3.v7.min.js"></script>
   
   <!-- Our JavaScript -->
-  <script type="text/javascript" src="static/js/logic.js"></script>
+  <script type="text/javascript" src="https://brenprie.github.io/Leaflet-Challenge/static/js/logic.js"></script>
 
 
 </body>
